do exercise 2.3